# legal-mcp

./: .dockerignore  .env.example  .flake8  .gitignore  AGENTS.md  Dockerfile  README.md  WORKFLOW_EXAMPLES.md  demo_mode.py  docker-compose.yml  feature_flags.py  main.py  pyproject.toml  requirements.txt  utils.py
.agents/: README.md
.github/workflows/: ci.yml
data/: README.md  citation_standards.json
data/cases/: cases.json
data/contracts/: contracts.json
data/statutes/: statutes.json
data/templates/: brief_frameworks.json
integrations/: README.md  __init__.py  config.py  courtlistener.py  pacer.py
prompts/: README.md  __init__.py  analysis_prompts.py  argument_prompts.py  drafting_prompts.py  research_prompts.py
resources/: README.md  __init__.py  brief_resources.py  case_resources.py  config_resources.py  contract_resources.py  integration_resources.py  statute_resources.py
tests/: README.md  __init__.py  conftest.py
tests/fixtures/: __init__.py
tests/integration/: __init__.py  test_analysis_queue_tools.py  test_citation_tools.py  test_contract_tools.py  test_deep_analysis_tools.py  test_demo_mode.py  test_document_tools.py  test_feature_flags.py  test_integrations.py  test_privilege_tools.py  test_prompts.py  test_research_tools.py  test_resources.py
tests/unit/: __init__.py  test_feature_flags.py  test_utils.py  (+1 more)
tools/: README.md  __init__.py  analysis_queue_tools.py  brief_tools.py  citation_tools.py  contract_tools.py  deep_analysis_tools.py  document_tools.py  integration_tools.py  privilege_tools.py  research_tools.py  risk_helpers.py
(+1 files in other folders)
